# securepay-wallet

./: .env.example  .gitignore  README.md  alembic.ini  auth.py  config.py  create_tables.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: DEPLOYMENT.md  GITHUB_DEPLOY_KEY.md  GITHUB_SECRETS.md  ORGANIZATION_SUMMARY.md  PAYMENT_CALLBACK.md  PENDING_TRANSACTIONS.md  QUICK_REFERENCE.md  SECURITY.md  SSL_NGINX_SETUP.md  STRUCTURE.md  TESTING.md  TROUBLESHOOTING.md  WEBHOOK_GUIDE.md
postman/: README.md
routers/: __init__.py  auth_routes.py  keys_routes.py  wallet_routes.py  webhook_routes.py
scripts/: cleanup.sh  deploy.sh  setup.sh  setup_server.sh
services/: __init__.py  paystack.py
static/: auth-test.html  payment-success.html
tests/: README.md  __init__.py  conftest.py
tests/e2e/: test_api.py  test_full_workflow.py
tests/integration/: test_wallet_api.py
tests/unit/: test_auth.py  test_models.py  test_paystack.py
