[project]
name = "securepay-wallet"
version = "1.0.0"
description = "SecurePay Wallet - Secure digital wallet API"
readme = "README.md"
requires-python = ">=3.9"

# Note: This is a flat-layout application, not an installable package
# Dependencies are managed via uv but the project itself is not installed

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "databases[postgresql]==0.9.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "authlib==1.3.0",
    "httpx==0.25.2",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "slowapi==0.1.9",
    "alembic==1.13.1",
    "itsdangerous==2.1.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.uv.sources]
# Prevent uv from trying to install this project as a package
# We're a flat-layout application, not a library

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Don't include the root package in builds
packages = []
